fixed: toolbox position, images modal text for no images, toast bug, publish modal white space

--- a/frontend/src/components/ToolBox/ToolBox.css
+++ b/frontend/src/components/ToolBox/ToolBox.css
@@ -65,7 +65,6 @@
     position: relative;
     left: 5px;
     scale: 1;
-    /* margin-bottom: 10px; */
 }
 
 #toolbox-font-container p {
@@ -74,18 +73,15 @@
     width: 100%;
     position: relative;
     left: 5px;
-    /* text-align: left; */
 }
 #toolbox-font-container input {
     max-width: 3em;
-    /* border-radius: 18px; */
     height: 2.5em;
     background: transparent;
     color: white;
 }
 
 #toolbox-font-container select {
-    /* border-radius: 18px; */
     background: transparent;
     color: white;
 }
@@ -107,8 +103,8 @@
 
 #toolbox-minimized-button {
     position: fixed;
-    bottom: 20px;
-    left: 100px;
+    top: 20px;
+    right: 100px;
     background-color: var(--bg-primary);
     filter: brightness(1.4);
     border-radius: 50%;
@@ -122,9 +118,7 @@
     position: fixed;
     bottom: 70px;
     left: 100px;
-    /* background-color: var(--bg-primary); */
     filter: brightness(1.4);
-    /* border-radius: 50%; */
     padding: 10px;
     z-index: 9999;
     transition: background-color, transform, box-shadow 0.3s ease;
